--- a/src/app/pages/home/introduction/introduction.component.html
+++ b/src/app/pages/home/introduction/introduction.component.html
@@ -1,12 +1,14 @@
 <div class="introduction text-center">
 	<h1 class="pt-3"> Traveler </h1>
-	<div class="row centrado">
+	<div class="row centrado" style="width: 100; margin: 0 auto">
 		<div>
-			<h2 class="mt-5 lead"> Conecta con personas de tu interés </h2>
-			<h3 class="mt-3 lead"> Disponible en App Store y Google Play </h3>
+			<h2 class="mt-5"> Encuentra <b> planes </b> donde <b> viajes </b> </h2>
+			<h2 class="mt-3"> Conecta con personas de tu interés </h2>
+			<h3 class="mt-3 lead"> Disponible en <b> App Store </b> y <b> Google Play </b> </h3>
 		</div>
 		<div class="mt-5">
 			<img src="../../../../assets/home/google.png" width="213px">
+			<img src="../../../../assets/home/app.svg" width="165px">
 		</div>
 	</div>		
 </div>
