--- a/src/app/pages/home/introduction/introduction.component.css
+++ b/src/app/pages/home/introduction/introduction.component.css
@@ -4,7 +4,7 @@
 	background-repeat: no-repeat;
   	background-size : cover;
 	background-position: center;
-	height: 66vh;	
+	min-height: 65vh;	
 }
 
 .centrado {
@@ -12,6 +12,7 @@
 	align-items: center;
 	justify-content: center;
 	height: 300px;
+	width: 100%;
 }
 
 h1,h2,h3 {
@@ -20,4 +21,14 @@ h1,h2,h3 {
 
 h2 {
 	font-size: 25px;
+}
+
+@media (max-width: 500px) {
+	h2 {
+		font-size: 22px;
+	}
+
+	h3 {
+		font-size: 18px;
+	}
 }
